--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
